--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 										</article>
 										<article>
 											<a href="projects.html" class="image" title="Surveillance Robot"><img src="images/Night-Guard 360.jpg" alt="" /></a>
-											<h3>Introducing The Night-Gaurd 360 Sentinel: Advance Autonomous Surveillance Robot</h3>
+											<h3>Introducing The Night-guard 360 Sentinel: Advance Autonomous Surveillance Robot</h3>
 											<p style="color:#030303">A compact security and monitoring robot powered by Raspberry Pi 4and Arduino Uno. It utilizes machine learning and autonomous mobility with live cameras for identifying individuals, guarding homes, and alerting to intruders via email and an electrical taser. Equipped with both regular and night vision cameras, the system is controlled through a user-friendly GUI and communicates via Wi-Fi, suitable for various applications, emphasizing safety.</p>
 											<ul class="actions">
 												<li><a href="projects.html" class="button" title="Surveillance Robot">More</a></li>
