--- a/projects.html
+++ b/projects.html
@@ -257,7 +257,7 @@
                                     
                                     <!-- Project List (Initially Hidden on Mobile) -->
                                     <div class="project-list" id="projectList">
-                                        <h2>Printed Circuit Boards List</h2>
+                                        <h2>Projects</h2>
                                         <ul>
                                             <li onclick="showProject(0)">Multi-Functional Quadruped Robot with Advance Locomotion, Remote Operability and Cognitive Capabilities</li>
                                             <li onclick="showProject(1)">Introducing The Night-Guard 360 Sentinel: Advanced Autonomous Surveillance Robot</li>
